--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bme280==0.5
 certifi==2020.4.5.1
 chardet==3.0.4
 DateTime==4.3
@@ -13,5 +14,6 @@ PyYAML==5.3.1
 requests==2.23.0
 serial==0.0.97
 six==1.14.0
+smbus2==0.3.0
 urllib3==1.25.8
 zope.interface==5.1.0
